# renderdoc-mcp-tests

./: .gitignore  CMakeLists.txt  README-CN.md  README.md  renderdoc-mcp-test-report.md
scripts/: run_extended_mcp_checks.py  run_full_coverage_checks.py  run_macos_checks.py  run_vulkan_mcp_checks.py
src/: renderdoc_mcp_opengl_advanced.cpp  renderdoc_mcp_opengl_smoke.cpp  renderdoc_mcp_opengl_smoke_macos.mm  renderdoc_mcp_vulkan_advanced.cpp
